# icais-dl

./: .gitignore  CMakeLists.txt  README.md
docs/: quick-start.md
include/: ComputeGraph.h  ComputeGraphNode.h  OpHook.h  Operator.h  OperatorImpl.h  Profiler.h  StorageConverter.h  Tensor.h  TensorStorage.h  accelerator_memory.h  arg_utils.h  icdl.h  icdl_exceptions.h  ordered_dict.h  tensor_utils.h  utils.h
include/operators/: Activation.h  Aggregate.h  BatchNorm2d.h  BinaryEltwiseOp.h  Conv2d.h  Impls.h  Linear.h  LinearImpl.h  Pooling2d.h  op_shared_ptr_gen.h  operators.h  pytorch_backend_utils.h  pytorch_impls.h
include/protos/: ComputeGraph.pb.h  Tensor.pb.h  protobuf_utils.h
models/: CMakeLists.txt  ResNet.cxx  ResNet.h
python/icdl/: ComputeGraph_pb2.py  Tensor_pb2.py  pb_utils.py  pytorch_serialize_utils.py
python/test/: serialize_fixp_tensor.py  serialize_resnet.py
src/: CMakeLists.txt  ComputeGraph.cxx  ComputeGraphNode.cxx  Operator.cxx  OperatorImpl.cxx  Profiler.cxx  StorageConverter.cxx  Tensor.cxx  TensorStorage.cxx  accelerator_memory.cxx  tensor_utils.cxx
src/operators/: Activations.cxx  Aggregate.cxx  BatchNorm2d.cxx  Conv2d.cxx  Linear.cxx  LinearImpl.cxx  Pooling2d.cxx  pytorch_backend_utils.cxx  pytorch_impls.cxx
src/protos/: ComputeGraph.pb.cc  ComputeGraph.proto  Tensor.pb.cc  Tensor.proto  mkproto_src.sh  protobuf_utils.cxx
test/: CMakeLists.txt  ModelTest.cxx  Operator_TEST.cxx  SeqGraphTest.cxx  Tensor_TEST.cxx  test_all.cxx  test_utils.cxx  test_utils.h
test/main_src/: try.cxx
